2025-11-06T00:42:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19120972834 # 800
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-06
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 478 1505 / 479 1509
* notice: next accum: outdated-unq outdated-all / unq all: 479 1509 / 482 1512
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-10-06] / [2025-10-23 2025-10-30 2025-11-04]

2025-10-17T00:51:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18578985435 # 799
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-17
* notice: last 14d: unq all: 1 4
* notice: prev accum: outdated-unq outdated-all / unq all: 477 1501 / 479 1509
* notice: next accum: outdated-unq outdated-all / unq all: 478 1505 / 479 1509
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-02] / []

2025-10-16T00:51:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18546835701 # 798
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-16
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 476 1500 / 479 1509
* notice: next accum: outdated-unq outdated-all / unq all: 477 1501 / 479 1509
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-01] / []

2025-10-15T00:52:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18514283904 # 797