@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-06T00:42:51Z",
-  "count_outdated" : 1509,
-  "uniques_outdated" : 479,
-  "count" : 1512,
-  "uniques" : 482,
+  "timestamp" : "2025-11-07T00:43:21Z",
+  "count_outdated" : 1510,
+  "uniques_outdated" : 480,
+  "count" : 1513,
+  "uniques" : 483,
   "views" : [
-    {
-      "timestamp": "2025-10-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-10-30T00:00:00Z",
       "count": 1,
@@ -25,6 +16,15 @@
     },
     {
       "timestamp": "2025-11-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-11-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
