@@ -3,17 +3,17 @@
   "uniques": 3,
   "views": [
     {
-      "timestamp": "2025-10-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-10-30T00:00:00Z",
       "count": 1,
       "uniques": 1
     },
     {
       "timestamp": "2025-11-04T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-11-06T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
