@@ -1,3 +1,12 @@
+2025-11-07T00:43:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19154437557 # 801
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-07
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 479 1509 / 482 1512
+* notice: next accum: outdated-unq outdated-all / unq all: 480 1510 / 483 1513
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-10-23] / [2025-11-06]
+
 2025-11-06T00:42:51Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19120972834 # 800
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-06
